chendge main.js

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
         <button type="submit">Search</button>
       </form>
       <div class="gallery"></div>
-      <div class="loader"></div>
+      <div class="loader">
+        <div class="spinner"></div>
+      </div>
     </section>
     <script type="module" src="./main.js"></script>
   </body>
