--- a/src/index.html
+++ b/src/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" defer src="./main.js"></script>
   </head>
   <body>
+    <form class="search-form js-search-form">
+      <input
+        class="search-input"
+        type="text"
+        name="searchtext"
+        placeholder="Search images..."
+      />
+      <button class="search-button" type="submit">Search</button>
+    </form>
+
     <section class="container">
-      <form id="search-form" class="search-form">
-        <input
-          type="text"
-          name="searchQuery"
-          autocomplete="off"
-          placeholder="Search images..."
-        />
-        <button type="submit">Search</button>
-      </form>
-      <div class="gallery"></div>
-      <div class="loader">
-        <div class="spinner"></div>
-      </div>
+      <span class="js-loader"></span>
+      <ul class="gallery js-gallery"></ul>
     </section>
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
